--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -108,8 +108,7 @@ body, .landing-root {
 }
 .landing-desc-row {
   margin-top: 2.2rem;
-  width: 56vw;
-  max-width: 600px;
+  width: 80vw;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -122,12 +121,13 @@ body, .landing-root {
   box-shadow: none;
   padding: 0 1.2rem 0 1.2rem;
   text-align: left;
-  margin-left: 30%
+  margin-left: 10%
 }
 .landing-desc-row .landing-desc-text {
-  font-size: 1.12rem;
+  font-size: 1.35rem;
   color: #fff;
-  max-width: 420px;
+  max-width: none;
+  width: 100%;
   line-height: 1.3;
   text-align: left;
   margin-left: 0;
@@ -161,21 +161,24 @@ body, .landing-root {
   width: 100%;
   padding: 0 3vw;
   gap: 2rem;
-}  
+}
 
 .landing-desc-left {
   display: flex;
   flex-direction: column;
   max-width: 420px;
+  font-size: 1.25rem;
+  line-height: 1.5;
 }
-
 .landing-icons-row {
   display: flex;
   gap: 2.7rem;
   justify-content: flex-end;
-  width: 100%;
+  width: auto;
   margin-top: 1.2rem;
-  margin-left: 30%;
+  margin-left: auto;
+  transform: none;
+  transform-origin: unset;
 }
 
 .landing-icon {
