Normalized the Manage test page

--- a/Front End/src/components/ManageTests/ManageTests.css
+++ b/Front End/src/components/ManageTests/ManageTests.css
@@ -130,9 +130,7 @@
 }
 
 .stat.start-time {
-  background: #e3f2fd;
-  border: 1px solid #2196f3;
-  color: #1976d2;
+  color: #6c757d;
 }
 
 .stat {
